chore: output ディレクトリに成果物を出力するよう修正