@@ -3,7 +3,7 @@ Java で JDBC Driver を用いて DB 接続をを行う際、`PreparedStatement`
 
 - こちらもご覧になってみてください: [【JUGナイトセミナー】検証では成功した Java のパッチが商用でコケた件](https://speakerdeck.com/takaichi00/jugnaitosemina-jian-zheng-dehacheng-gong-sita-java-falsepatutigashang-yong-dekoketajian)
 
-# FullGC 再現手順
+# JFR で確認
 - 1万件ほどのデータを入れた DB を用意します。接続先や DB 名は以下の部分を任意に変えて設定します。
 ```$xslt
 private static final String localConnectionUrl = "jdbc:mysql://127.0.0.1:3306/test_database";
@@ -38,6 +38,21 @@ mysql> load data local infile "/Users/totakaic/ideaProjects/jfr-sample/jdbc-bad-
 
 ```
 
+## 通常起動で JFR で解析する
+
+- 実行可能 jar を作成します。
+```
+mvn clean package
+```
+
+- 以下のコマンドを実行します。
+```
+java -XX:StartFlightRecording=dumponexit=true,filename=./output/jdbc-bad-sample-non-FULLGC.jfr -Xms20M -Xmx20M -jar ./target/jdbc-bad-sample.jar
+```
+
+- JMC を起動し、「ファイル(F)」→「ファイルを開く」から生成した jdbc-bad-sample.jfr を選択すると分析結果が表示されていることを確認します。
+
+## FULL GC を発生させて JFR で解析する
 - `com.takaichi00.sample.badjdbcconnection.Main` の 以下の処理をコメントアウトします。
 
 ```$xslt
@@ -56,14 +71,14 @@ rs2.close();
 
 ```
 
-- コンパイルして実行可能 jar を生成します。
+- 実行可能 jar を生成します。
 ```$xslt
 mvn clean package
 ```
 
 - 以下のコマンドを実行して処理を開始します。すると GC ログが出力され、しばらくすると FullGC が発生することがわかります。
 ```$xslt
-java -Xlog:gc:./gc.log -Xlog:gc* -Xms20M -Xmx20M -jar ./target/jdbc-bad-sample.jar
+java -XX:StartFlightRecording=dumponexit=true,filename=./output/jdbc-bad-sample-FULLGC.jfr -Xms20M -Xmx20M -jar ./target/jdbc-bad-sample.jar
 ```
 
 - 実行したディレクトリに gc.log が生成されるので、[GC Viewer](https://github.com/chewiebug/GCViewer/wiki/Changelog) でみてみると視覚的に FullGC が発生することが確認できます。
